[gd_scene load_steps=7 format=3 uid="uid://dp8jphj7nj6ku"]

[ext_resource type="Script" path="res://scenes/ui/menu/setting_option.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="2_kfs5u"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="3_mn64k"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_qccue"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="4_welay"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="5_23mih"]

[node name="option" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 570.0
offset_bottom = 70.0
script = ExtResource("2")

[node name="label" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("2_kfs5u")
text = "Option
"
vertical_alignment = 1

[node name="toggle" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 5.0
offset_right = 550.0
offset_bottom = 45.0
texture_normal = ExtResource("3_mn64k")
texture_pressed = ExtResource("4_welay")
texture_hover = ExtResource("5_23mih")
texture_focused = ExtResource("5_23mih")

[node name="label" type="Label" parent="toggle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_qccue")
text = "TR_OFF"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="toggle" to="." method="_show_help"]
[connection signal="mouse_entered" from="toggle" to="." method="_show_help"]
[connection signal="mouse_exited" from="toggle" to="." method="_clear_help"]
[connection signal="pressed" from="toggle" to="." method="_on_toggle_button_pressed"]
